bindings/c/include/xtreme3d.h

__declspec(dllimport) double DceDynamicStopAbsAcceleration(double);
__declspec(dllimport) double DceDynamicJump(double, double, double);
__declspec(dllimport) double DceDynamicMove(double, double, double, double, double);
__declspec(dllimport) double DceDynamicMoveTo(double, double, double, double, double);
__declspec(dllimport) double DceDynamicSetVelocity(double, double, double, double);
__declspec(dllimport) double DceDynamicInGround(double);
__declspec(dllimport) double DceDynamicSetMaxRecursionDepth(double, double);
__declspec(dllimport) double DceStaticSetManager(double, double);
__declspec(dllimport) double DceStaticSetActive(double, double);
__declspec(dllimport) double DceStaticSetShape(double, double);
__declspec(dllimport) double DceStaticSetLayer(double, double);
__declspec(dllimport) double DceStaticSetSize(double, double, double, double);
__declspec(dllimport) double DceStaticSetSolid(double, double);
__declspec(dllimport) double DceStaticSetFriction(double, double);
__declspec(dllimport) double DceStaticSetBounceFactor(double, double);
__declspec(dllimport) double DceDynamicGetVelocity(double, double);
__declspec(dllimport) double DceDynamicSetAbsVelocity(double, double, double, double);
__declspec(dllimport) double DceDynamicGetAbsVelocity(double, double);
__declspec(dllimport) double DceDynamicApplyImpulse(double, double, double, double);
__declspec(dllimport) double DceDynamicApplyAbsImpulse(double, double, double, double);
/* dummycube.pas */
__declspec(dllimport) double DummycubeCreate(double);
__declspec(dllimport) double DummycubeAmalgamate(double, double);
__declspec(dllimport) double DummycubeSetCameraMode(double, double);
__declspec(dllimport) double DummycubeSetVisible(double, double);
__declspec(dllimport) double DummycubeSetEdgeColor(double, double);
__declspec(dllimport) double DummycubeSetCubeSize(double, double);
/* engine.pas */
__declspec(dllimport) double EngineCreate(void);
__declspec(dllimport) double EngineDestroy(void);
__declspec(dllimport) double EngineSetObjectsSorting(double);
__declspec(dllimport) double EngineSetCulling(double);
__declspec(dllimport) double EngineUpdate(double);
__declspec(dllimport) double EngineSaveScene(char*);
__declspec(dllimport) double EngineLoadScene(char*);
__declspec(dllimport) double EngineRootObject(void);
__declspec(dllimport) double EngineShowLoadingErrors(double);
__declspec(dllimport) double EngineSetMaxLights(double);
__declspec(dllimport) double EngineGetTimeStep(void);
__declspec(dllimport) double EngineGetLastRaycastPosition(double);
__declspec(dllimport) double EngineGetLastRaycastNormal(double);
__declspec(dllimport) double PointerToReal(char*);
/* fbo.pas */
__declspec(dllimport) double FBOCreate(double, double, double);
__declspec(dllimport) double FBOSetActive(double, double);
__declspec(dllimport) double FBOSetAspect(double, double);
__declspec(dllimport) double FBOSetPickableTarget(double, double);
__declspec(dllimport) double FBOSetSize(double, double, double);
__declspec(dllimport) double FBOSetCamera(double, double);
__declspec(dllimport) double FBOSetRootObject(double, double);
__declspec(dllimport) double FBOSetBackgroundColor(double, double);
__declspec(dllimport) double FBOSetEnabledRenderBuffers(double, double, double);
__declspec(dllimport) double FBOSetSceneScaleFactor(double, double);
__declspec(dllimport) double FBOSetTargetVisibility(double, double);
__declspec(dllimport) double FBOSetMaterialLibrary(double, double);
__declspec(dllimport) double FBOSetColorTextureName(double, char*);
__declspec(dllimport) double FBOSetDepthTextureName(double, char*);
__declspec(dllimport) double FBOSetClearOptions(double, double, double, double, double);
__declspec(dllimport) double FBOSetStencilPrecision(double, double);
__declspec(dllimport) double FBOSetShadowMapMode(double, double);