bindings/python3/xtreme3d/x3dfuncs.py


x3d.DceDynamicStopAbsAcceleration.argtypes = [ctypes.c_double]
x3d.DceDynamicStopAbsAcceleration.restype = ctypes.c_double
def DceDynamicStopAbsAcceleration(aObj):
    return x3d.DceDynamicStopAbsAcceleration(aObj)

x3d.DceDynamicJump.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.DceDynamicJump.restype = ctypes.c_double
def DceDynamicJump(aObj, aHeight, aSpeed):
    return x3d.DceDynamicJump(aObj, aHeight, aSpeed)

x3d.DceDynamicMove.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.DceDynamicMove.restype = ctypes.c_double
def DceDynamicMove(aObj, aX, aY, aZ, aDelta):
    return x3d.DceDynamicMove(aObj, aX, aY, aZ, aDelta)

x3d.DceDynamicMoveTo.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.DceDynamicMoveTo.restype = ctypes.c_double
def DceDynamicMoveTo(aObj, aX, aY, aZ, aAmount):
    return x3d.DceDynamicMoveTo(aObj, aX, aY, aZ, aAmount)

x3d.DceDynamicSetVelocity.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.DceDynamicSetVelocity.restype = ctypes.c_double
def DceDynamicSetVelocity(aObj, aX, aY, aZ):
    return x3d.DceDynamicSetVelocity(aObj, aX, aY, aZ)

x3d.DceDynamicInGround.argtypes = [ctypes.c_double]
x3d.DceDynamicInGround.restype = ctypes.c_double
def DceDynamicInGround(aObj):
    return x3d.DceDynamicInGround(aObj)

x3d.DceDynamicSetMaxRecursionDepth.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.DceDynamicSetMaxRecursionDepth.restype = ctypes.c_double
def DceDynamicSetMaxRecursionDepth(aObj, aDepth):
    return x3d.DceDynamicSetMaxRecursionDepth(aObj, aDepth)

x3d.DceStaticSetManager.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.DceStaticSetManager.restype = ctypes.c_double
def DceStaticSetManager(aObj, aMan):
    return x3d.DceStaticSetManager(aObj, aMan)

x3d.DceStaticSetActive.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.DceStaticSetActive.restype = ctypes.c_double
def DceStaticSetActive(aObj, aMode):
    return x3d.DceStaticSetActive(aObj, aMode)

x3d.DceStaticSetShape.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.DceStaticSetShape.restype = ctypes.c_double
def DceStaticSetShape(aObj, aMode):
    return x3d.DceStaticSetShape(aObj, aMode)

x3d.DceStaticSetLayer.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.DceStaticSetLayer.restype = ctypes.c_double
def DceStaticSetLayer(aObj, aLayer):
    return x3d.DceStaticSetLayer(aObj, aLayer)

x3d.DceStaticSetSize.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.DceStaticSetSize.restype = ctypes.c_double
def DceStaticSetSize(aObj, aX, aY, aZ):
    return x3d.DceStaticSetSize(aObj, aX, aY, aZ)

x3d.DceStaticSetSolid.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.DceStaticSetSolid.restype = ctypes.c_double
def DceStaticSetSolid(aObj, aMode):
    return x3d.DceStaticSetSolid(aObj, aMode)

x3d.DceStaticSetFriction.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.DceStaticSetFriction.restype = ctypes.c_double
def DceStaticSetFriction(aObj, aFriction):
    return x3d.DceStaticSetFriction(aObj, aFriction)

x3d.DceStaticSetBounceFactor.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.DceStaticSetBounceFactor.restype = ctypes.c_double
def DceStaticSetBounceFactor(aObj, aBfactor):
    return x3d.DceStaticSetBounceFactor(aObj, aBfactor)

x3d.DceDynamicGetVelocity.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.DceDynamicGetVelocity.restype = ctypes.c_double
def DceDynamicGetVelocity(aObj, aInd):
    return x3d.DceDynamicGetVelocity(aObj, aInd)

x3d.DceDynamicSetAbsVelocity.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.DceDynamicSetAbsVelocity.restype = ctypes.c_double
def DceDynamicSetAbsVelocity(aObj, aX, aY, aZ):
    return x3d.DceDynamicSetAbsVelocity(aObj, aX, aY, aZ)

x3d.DceDynamicGetAbsVelocity.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.DceDynamicGetAbsVelocity.restype = ctypes.c_double
def DceDynamicGetAbsVelocity(aObj, aInd):
    return x3d.DceDynamicGetAbsVelocity(aObj, aInd)

x3d.DceDynamicApplyImpulse.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.DceDynamicApplyImpulse.restype = ctypes.c_double
def DceDynamicApplyImpulse(aObj, aX, aY, aZ):
    return x3d.DceDynamicApplyImpulse(aObj, aX, aY, aZ)

x3d.DceDynamicApplyAbsImpulse.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.DceDynamicApplyAbsImpulse.restype = ctypes.c_double
def DceDynamicApplyAbsImpulse(aObj, aX, aY, aZ):
    return x3d.DceDynamicApplyAbsImpulse(aObj, aX, aY, aZ)


# dummycube.pas
x3d.DummycubeCreate.argtypes = [ctypes.c_double]
x3d.DummycubeCreate.restype = ctypes.c_double
def DummycubeCreate(aParent):
    return x3d.DummycubeCreate(aParent)

x3d.DummycubeAmalgamate.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.DummycubeAmalgamate.restype = ctypes.c_double
def DummycubeAmalgamate(aObj, aMode):
    return x3d.DummycubeAmalgamate(aObj, aMode)

x3d.DummycubeSetCameraMode.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.DummycubeSetCameraMode.restype = ctypes.c_double
def DummycubeSetCameraMode(aObj, aCim):
    return x3d.DummycubeSetCameraMode(aObj, aCim)

x3d.DummycubeSetVisible.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.DummycubeSetVisible.restype = ctypes.c_double
def DummycubeSetVisible(aObj, aMode):
    return x3d.DummycubeSetVisible(aObj, aMode)

x3d.DummycubeSetEdgeColor.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.DummycubeSetEdgeColor.restype = ctypes.c_double
def DummycubeSetEdgeColor(aObj, aColor):
    return x3d.DummycubeSetEdgeColor(aObj, aColor)

x3d.DummycubeSetCubeSize.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.DummycubeSetCubeSize.restype = ctypes.c_double
def DummycubeSetCubeSize(aObj, aSize):
    return x3d.DummycubeSetCubeSize(aObj, aSize)


# engine.pas
x3d.EngineCreate.argtypes = []
x3d.EngineCreate.restype = ctypes.c_double
def EngineCreate():
    return x3d.EngineCreate()

x3d.EngineDestroy.argtypes = []
x3d.EngineDestroy.restype = ctypes.c_double
def EngineDestroy():
    return x3d.EngineDestroy()

x3d.EngineSetObjectsSorting.argtypes = [ctypes.c_double]
x3d.EngineSetObjectsSorting.restype = ctypes.c_double
def EngineSetObjectsSorting(aOs):
    return x3d.EngineSetObjectsSorting(aOs)

x3d.EngineSetCulling.argtypes = [ctypes.c_double]
x3d.EngineSetCulling.restype = ctypes.c_double
def EngineSetCulling(aVc):
    return x3d.EngineSetCulling(aVc)

x3d.EngineUpdate.argtypes = [ctypes.c_double]
x3d.EngineUpdate.restype = ctypes.c_double
def EngineUpdate(aDelta):
    return x3d.EngineUpdate(aDelta)

x3d.EngineSaveScene.argtypes = [ctypes.c_char_p]
x3d.EngineSaveScene.restype = ctypes.c_double
def EngineSaveScene(aFilename):
    return x3d.EngineSaveScene(aFilename)

x3d.EngineLoadScene.argtypes = [ctypes.c_char_p]
x3d.EngineLoadScene.restype = ctypes.c_double
def EngineLoadScene(aFilename):
    return x3d.EngineLoadScene(aFilename)

x3d.EngineRootObject.argtypes = []
x3d.EngineRootObject.restype = ctypes.c_double
def EngineRootObject():
    return x3d.EngineRootObject()

x3d.EngineShowLoadingErrors.argtypes = [ctypes.c_double]
x3d.EngineShowLoadingErrors.restype = ctypes.c_double
def EngineShowLoadingErrors(aMode):
    return x3d.EngineShowLoadingErrors(aMode)

x3d.EngineSetMaxLights.argtypes = [ctypes.c_double]
x3d.EngineSetMaxLights.restype = ctypes.c_double
def EngineSetMaxLights(aLights):
    return x3d.EngineSetMaxLights(aLights)

x3d.EngineGetTimeStep.argtypes = []
x3d.EngineGetTimeStep.restype = ctypes.c_double
def EngineGetTimeStep():
    return x3d.EngineGetTimeStep()

x3d.EngineGetLastRaycastPosition.argtypes = [ctypes.c_double]
x3d.EngineGetLastRaycastPosition.restype = ctypes.c_double
def EngineGetLastRaycastPosition(aInd):
    return x3d.EngineGetLastRaycastPosition(aInd)

x3d.EngineGetLastRaycastNormal.argtypes = [ctypes.c_double]
x3d.EngineGetLastRaycastNormal.restype = ctypes.c_double
def EngineGetLastRaycastNormal(aInd):
    return x3d.EngineGetLastRaycastNormal(aInd)

x3d.PointerToReal.argtypes = [ctypes.c_char_p]
x3d.PointerToReal.restype = ctypes.c_double
def PointerToReal(aP):
    return x3d.PointerToReal(aP)


# fbo.pas
x3d.FBOCreate.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.FBOCreate.restype = ctypes.c_double
def FBOCreate(aW, aH, aParent):
    return x3d.FBOCreate(aW, aH, aParent)

x3d.FBOSetActive.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.FBOSetActive.restype = ctypes.c_double
def FBOSetActive(aFbo, aMode):
    return x3d.FBOSetActive(aFbo, aMode)

x3d.FBOSetAspect.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.FBOSetAspect.restype = ctypes.c_double
def FBOSetAspect(aFbo, aAspect):
    return x3d.FBOSetAspect(aFbo, aAspect)

x3d.FBOSetPickableTarget.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.FBOSetPickableTarget.restype = ctypes.c_double
def FBOSetPickableTarget(aFbo, aMode):
    return x3d.FBOSetPickableTarget(aFbo, aMode)

x3d.FBOSetSize.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.FBOSetSize.restype = ctypes.c_double
def FBOSetSize(aFbo, aWidth, aHeight):
    return x3d.FBOSetSize(aFbo, aWidth, aHeight)

x3d.FBOSetCamera.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.FBOSetCamera.restype = ctypes.c_double
def FBOSetCamera(aFbo, aCam):
    return x3d.FBOSetCamera(aFbo, aCam)

x3d.FBOSetRootObject.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.FBOSetRootObject.restype = ctypes.c_double
def FBOSetRootObject(aFbo, aObj):
    return x3d.FBOSetRootObject(aFbo, aObj)

x3d.FBOSetBackgroundColor.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.FBOSetBackgroundColor.restype = ctypes.c_double
def FBOSetBackgroundColor(aFbo, aColor):
    return x3d.FBOSetBackgroundColor(aFbo, aColor)

x3d.FBOSetEnabledRenderBuffers.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.FBOSetEnabledRenderBuffers.restype = ctypes.c_double
def FBOSetEnabledRenderBuffers(aFbo, aDepth, aStencil):
    return x3d.FBOSetEnabledRenderBuffers(aFbo, aDepth, aStencil)

x3d.FBOSetSceneScaleFactor.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.FBOSetSceneScaleFactor.restype = ctypes.c_double
def FBOSetSceneScaleFactor(aFbo, aScalefactor):
    return x3d.FBOSetSceneScaleFactor(aFbo, aScalefactor)

x3d.FBOSetTargetVisibility.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.FBOSetTargetVisibility.restype = ctypes.c_double
def FBOSetTargetVisibility(aFbo, aTv):
    return x3d.FBOSetTargetVisibility(aFbo, aTv)

x3d.FBOSetMaterialLibrary.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.FBOSetMaterialLibrary.restype = ctypes.c_double
def FBOSetMaterialLibrary(aFbo, aMatlib):
    return x3d.FBOSetMaterialLibrary(aFbo, aMatlib)

x3d.FBOSetColorTextureName.argtypes = [ctypes.c_double, ctypes.c_char_p]
x3d.FBOSetColorTextureName.restype = ctypes.c_double
def FBOSetColorTextureName(aFbo, aName):
    return x3d.FBOSetColorTextureName(aFbo, aName)

x3d.FBOSetDepthTextureName.argtypes = [ctypes.c_double, ctypes.c_char_p]
x3d.FBOSetDepthTextureName.restype = ctypes.c_double
def FBOSetDepthTextureName(aFbo, aName):
    return x3d.FBOSetDepthTextureName(aFbo, aName)

x3d.FBOSetClearOptions.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.FBOSetClearOptions.restype = ctypes.c_double
def FBOSetClearOptions(aFbo, aClearcolor, aCleardepth, aClearstencil, aUsebufferbackground):
    return x3d.FBOSetClearOptions(aFbo, aClearcolor, aCleardepth, aClearstencil, aUsebufferbackground)

x3d.FBOSetStencilPrecision.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.FBOSetStencilPrecision.restype = ctypes.c_double
def FBOSetStencilPrecision(aFbo, aSp):
    return x3d.FBOSetStencilPrecision(aFbo, aSp)

x3d.FBOSetShadowMapMode.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.FBOSetShadowMapMode.restype = ctypes.c_double
def FBOSetShadowMapMode(aFbo, aMode):
    return x3d.FBOSetShadowMapMode(aFbo, aMode)

